kurs html z youtube skończony

--- a/About Us.html
+++ b/About Us.html
@@ -2,10 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <title>O nas</title>
 </head>
 <body>
-<h1>O nas</h1>
+
+    <h1>O nas</h1>
         <p>Jesteśmy firmą zajmującą się połowem i sprzedażą świeżych ryb</p>
+
+        <ol>
+            <li>Sandaczy</li>
+            <li>Tuńczyków</li>
+            <li>Sumów</li>
+            <li>Rekinów</li>
+            <li>I wielu innych w tym chronionch gatunków
+                <ol>
+                    <li>-5.1</li>
+                    <li>-5.2</li>
+                    <li>-5.3</li>
+                </ol>
+                </li>
+        </ol>
+
 </body>
 </html>
