--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <title>Kontakt</title>
 </head>
 <body>
     <h1>Kontakt</h1>
-    <p> tel. 123456789 <br> ul. śmieszna 25/3 Warszawa</p>
+    <ul>
+        <li><p class="phone"> tel. 123456789</p></li>
+        <li><p class="adress">ul. śmieszna 25/3 Warszawa</p></li>
+        <li><p class="email">email</p></li>
+    </ul>
 </body>
 </html>
