--- a/index.html
+++ b/index.html
@@ -8,32 +8,54 @@
         <title>My first website</title>
         <link rel="stylesheet" type="text/css" href="css/main.css">
 
+
+
     </head>
     <body>
 
         <div id="top"></div>
-        <a href="contact.html" target="_blank">Skontaktuj się z nami</a>
-        <a href="prices/freshfish prices.html">Ceny</a>
-        <a href="https://www.onet.pl" target="_blank">See more</a>
-        <a href="downloads/ceny">Ściągnij listę cen</a>
+        <div id="header">
+            <img src="fish-1325308.jpg" alt="Mr Green's Fish Emporium">
+            <h1>Moja pierwsza strona</h1>
+        </div>
+        <hr>
 
-        <img src="fish-1325308.jpg" alt="Mr Green's Fish Emporium">
-        <h1>Moja pierwsza strona</h1>
-        <p>Cześć, mam nadzieję, że podoba się wam moja strona. Sprzedajemy ryby</p>
-        <p>Cześć, mam nadzieję, <small>że podoba się wam moja strona.</small> Sprzedajemy ryby</p>
-        <p>Cześć, mam nadzieję, <mark>że podoba się wam moja strona.</mark> Sprzedajemy ryby</p>
-        <p>Cześć, mam nadzieję, <sub>że podoba się wam moja strona.</sub> Sprzedajemy ryby</p>
-        <p>Cześć, mam nadzieję, <sup>że podoba się wam moja strona.</sup> Sprzedajemy ryby <strong><mark>10<sup>4</sup></mark></strong></p>
-        <p><pre>Cześć, mam nadzieję, że podoba się wam moja strona. Sprzedajemy ryby</pre></p>
+        <div id="navigation">
+            <ul>
+                <li><a onclick="alert('Witajcie na naszej stronie!');" href="About Us.html">O nas</a></li>
+                <li><a href="contact.html" target="_blank">Skontaktuj się z nami</a></li>
+                <li><a href="prices/freshfish prices.html">Ceny</a></li>
+                <li><a href="https://www.onet.pl" target="_blank">See more</a></li>
+                <li><a href="downloads/ceny">Ściągnij listę cen</a></li>
+            </ul>
+        </div>
 
-        <h1>To jest tag h1</h1>
-        <h2>To jest tag h2</h2>
-        <h3>To jest tag h3</h3>
-        <h4>To jest tag h4</h4>
-        <h5>To jest tag h5</h5>
-        <h6>To jest tag h6</h6>
+
+        <hr>
+
+        <div id="types-of-fish">
+            <p>Cześć, mam nadzieję, że podoba się wam moja strona. Sprzedajemy ryby</p>
+            <p>Cześć, mam nadzieję, <small>że podoba się wam moja strona.</small> Sprzedajemy ryby</p>
+            <p>Cześć, mam nadzieję, <mark>że podoba się wam moja strona.</mark> Sprzedajemy ryby</p>
+            <p>Cześć, mam nadzieję, <sub>że podoba się wam moja strona.</sub> Sprzedajemy ryby</p>
+            <p>Cześć, mam nadzieję, <sup>że podoba się wam moja strona.</sup> Sprzedajemy ryby <strong><mark>10<sup>4</sup></mark></strong></p>
+            <p><pre>Cześć, mam nadzieję, że podoba się wam moja strona. Sprzedajemy ryby</pre></p>
+        </div>
+
+        <hr>
+
+        <div id="about-us">
+            <h1>To jest tag h1</h1>
+            <h2>To jest tag h2</h2>
+            <h3>To jest tag h3</h3>
+            <h4>To jest tag h4</h4>
+            <h5>To jest tag h5</h5>
+            <h6>To jest tag h6</h6>
+        </div>
 
         <a href="#top">Do początku</a>
+
+
 
     </body>
 </html>
